--- a/list.html
+++ b/list.html
@@ -8,8 +8,8 @@
 <body>
   <h1>15장 소단원을 선택해주세요.</h1>
   <ol>
-    <li><a href = "MyCalc/15.1.html">15.1</a></li>
-    <li><a href = "MyCalc/15.2.html">15.2</a></li>
+    <li><a href = "15.1.html">15.1</a></li>
+    <li><a href = "15.2.html">15.2</a></li>
     <li>15.3</li>
     <li>15.4</li>
     <li>15.5</li>
